--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "aniverse",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.16"
-  },
-  "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.16"
-  }
+	"name": "aniverse",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"fast": "next dev --turbo",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@phosphor-icons/react": "^2.1.7",
+		"next": "14.2.16",
+		"nextjs-toploader": "^3.7.15",
+		"react": "^18",
+		"react-dom": "^18"
+	},
+	"devDependencies": {
+		"eslint": "^8",
+		"eslint-config-next": "14.2.16",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1"
+	}
 }
