--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"next": "14.2.16",
 		"nextjs-toploader": "^3.7.15",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"react-youtube": "^10.1.0"
 	},
 	"devDependencies": {
 		"eslint": "^8",
