--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@phosphor-icons/react": "^2.1.7",
 		"next": "14.2.16",
+		"next-auth": "^4.24.10",
 		"nextjs-toploader": "^3.7.15",
 		"react": "^18",
 		"react-dom": "^18",
